force-app/main/default/objects/Activity/fields/AutoUpdate_Date__c.field-meta.xml
<CustomField>
    <fullName>AutoUpdate_Date__c</fullName>
    <label>AutoUpdate Date</label>
    <type>DateTime</type>
</CustomField>