force-app/main/default/objects/Activity/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>