force-app/main/default/objects/Activity/fields/Created_from_Casse__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Casse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Casse</label>
    <type>Checkbox</type>
</CustomField>