force-app/main/default/objects/Activity/fields/Date_Task__c.field-meta.xml
<CustomField>
    <fullName>Date_Task__c</fullName>
    <formula>DATEVALUE(Estimate_Task__c) -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Task</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>