force-app/main/default/objects/Activity/fields/Estimate_Task__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Task__c</fullName>
    <label>Estimate Task</label>
    <type>DateTime</type>
</CustomField>