force-app/main/default/objects/Activity/fields/Follow_up_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Type__c</fullName>
    <label>Follow-up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS - Phone - Call</fullName>
            </value>
            <value>
                <fullName>Social text mess</fullName>
            </value>
            <value>
                <fullName>Visit showroom</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event/ Touring Invitation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>