force-app/main/default/objects/Activity/fields/Is_Close__c.field-meta.xml
<CustomField>
    <fullName>Is_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Close</label>
    <type>Checkbox</type>
</CustomField>