force-app/main/default/objects/Activity/fields/Note_from_Case__c.field-meta.xml
<CustomField>
    <fullName>Note_from_Case__c</fullName>
    <formula>Case_Number__r.Complaint_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note from Case</label>
    <type>Text</type>
</CustomField>