force-app/main/default/objects/Activity/fields/Note_to_next_follow__c.field-meta.xml
<CustomField>
    <fullName>Note_to_next_follow__c</fullName>
    <label>Note to next follow</label>
    <type>TextArea</type>
</CustomField>