force-app/main/default/objects/Activity/fields/WhoId_Tempt__c.field-meta.xml
<CustomField>
    <fullName>WhoId_Tempt__c</fullName>
    <label>WhoId Tempt</label>
    <length>200</length>
    <type>Text</type>
</CustomField>